2008-06-17  Hans Breuer  <hans@breuer.org>

        * gwin32mount.[ch] gwin32volumemonitor.[ch] : bits and pieces from 
        gtk-2-12 and gunix*.[hc] to make the file chooser show drive letter
	access again on win32, see bug #538127
        * giomodule.c : ensure GWin32VolumeMonitor is registered
        * glocaldireoctorymonitor.c : initial state on win32 is_mounted=TRUE
        * Makefile.am makefile.msc : updated

2008-06-16  Hans Breuer  <hans@breuer.org>

	* glocalfileenumerator.c(_g_local_file_enumerator_new) : declaration 
	and initialization in one step avoids c99ism

2008-06-16  Christian Persch  <chpe@gnome.org>

	* gio/gappinfo.c
	* gio/gbufferedinputstream.c
	* gio/gcancellable.c
	* gio/gdatainputstream.c
	* gio/gdesktopappinfo.c
	* gio/gfile.c
	* gio/gfileenumerator.c
	* gio/gfileinputstream.c
	* gio/gfileoutputstream.c
	* gio/ginputstream.c
	* gio/glocaldirectorymonitor.c
	* gio/glocalfile.c
	* gio/glocalfileenumerator.c
	* gio/glocalfileinfo.c
	* gio/glocalfilemonitor.c
	* gio/glocalfileoutputstream.c
	* gio/gmemoryinputstream.c
	* gio/gmemoryoutputstream.c
	* gio/goutputstream.c
	* gio/gwin32appinfo.c: Use g_set_error_literal where appropriate. Patch from 
	bug #535947.

2008-06-16  Tor Lillqvist  <tml@novell.com>

	Bug 538362 - Get Win32 icons back in the file chooser

	* gcontenttype.c (g_content_type_get_icon): Look up the icon
	corresponding to a file extension in the Registry. Patch by Hans
	Breuer.
	(get_registry_classes_key): Handle also REG_EXPAND_SZ type values.
	
2008-06-16  Tor Lillqvist  <tml@novell.com>

	Patches by Hans Breuer:

	* glocalfile.c (is_xp_or_later): Handle compiling against older
	SDK headers with missing VerifyVersionInfo().  Conditioned on
	_MSC_VER, but should probably use some better test.
	* glocalfile.c (g_local_file_query_filesystem_info): Don't test
	uninitialised statfs_result variable on Win32.

2008-06-16  Michael Natterer  <mitch@imendio.com>
